vbnc/vbnc/tests/Errors/30337-4.vb
Module bug
    Sub Main()
        For i As System.DBNull = 1 To 2

        Next
    End Sub
End Module